--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -29,17 +29,17 @@
 	<body>
 		<div class="identifyResult">
 			<div class="identifyImg">
-				<div class="resultShowTil">
+				<!--<div class="resultShowTil">
 					<i class="memberback"></i>
 					认证查询结果
-				</div>
+				</div>-->
 				<!--<div class="memberImage">
 					<div class="Img_img">
 						<img src="../img/member.png" alt="" />
 					</div>
 				</div>-->
 			</div>
-			<ul id="resultUl">
+			<!--<ul id="resultUl">
 				<li><span class="commonColor">会员编码：</span><span id="memberNumber" class="commonRight">TN160077772</span></li>
 				<li><span class="commonColor">验证码：</span><span id="identifyCode" class="commonRight">b050</span></li>
 				<li><span class="commonColor">会员姓名：</span><span id="memberName" class="commonRight">司亮</span></li>
@@ -50,7 +50,7 @@
 				<li class="coverOrshow"><span class="commonColor">段位信息：</span><span id="taekwondo" class="commonRight">05216846【4段】</span></li>
 				<li class="coverOrshow"><span class="commonColor">通过时间：</span><span id="passTime" class="commonRight">2016-06-08</span></li>
 				
-			</ul>
+			</ul>-->
 		</div>
 		
 		<script src="../js/mui.min.js"></script>
