training_list.html

--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -244,6 +244,19 @@
 											<button class="mui-btn-blue border-radius">快速报名</button>
 										</div>
 									</li>
+									<li class="mui-table-view-cell mui-media">
+										<a href="javascript:;">
+											<img class="mui-pull-left" src="../img/saishi_img.jpg">
+											<div class="saishi_text mui-media-body">
+												<h2 class="">2017年全国大众跆拳道一级以上裁判员年审复训培训班</h2>
+												<p class="mui-text-justify">内容简介：2017年全国大众跆拳道一级以上裁判员年审复训培训班...</p>
+											</div>
+										</a>
+										<div class="saishi_time">
+											<p class="peixun_p">比赛时间：2017年12月20日至2017年12月25日</p>
+											<button class="mui-btn-blue border-radius">快速报名</button>
+										</div>
+									</li>
 								</ul>
 							</div>
 						</div>
