--- a/training/training_list.html
+++ b/training/training_list.html
@@ -98,9 +98,9 @@
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<div id="cur" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-						<a name='0' class="mui-control-item mui-active" href="#item1mobile">省级</a>
-						<a name='1' class="mui-control-item" href="#item2mobile">国家级</a>
-						<a name='2' class="mui-control-item" href="#item3mobile">国际级</a>
+						<a id="a22" class="mui-control-item mui-active" href="#item1mobile"></a>
+						<a id="a23" class="mui-control-item" href="#item2mobile"></a>
+						<a id="a24" class="mui-control-item" href="#item3mobile"></a>
 					</div>
 					<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-4"></div>
 					<div id="time2" class="current-position">地区</div>
@@ -153,114 +153,85 @@
 		<script src="../js/mui.pullToRefresh.js"></script>
 		<script src="../js/mui.pullToRefresh.material.js"></script>
 		<script>
+			var cur=document.querySelectorAll("#cur>a")
+			var id=[];
+			$.each(cur, function(index,value) {
+				id.push(value.id.slice(1))
+				console.log(id)
+			});
+			
+			var url='http://d2p7pk.natappfree.cc/Train/TrainNavBar';
+		    $.ajax({
+			    url:url,
+			    data:{
+			    	typeId:id,
+			    	pageindex:5
+			    },
+			    type:'post',
+			    dataType:'json',
+			    processData: false, 
+			    success:function(data){
+			    	
+			    	console.log(document.querySelectorAll("#cur>a"))
+			    	for(var i=0;i<data.Data.Data.length;i++){
+			    		cur[0].innerHTML=data.Data.Data[2].Title
+			    		cur[1].innerHTML=data.Data.Data[1].Title
+			    		cur[2].innerHTML=data.Data.Data[0].Title
 
-//			var url='http://d2p7pk.natappfree.cc/Train/TrainList';
-//			    $.ajax({
-//				    url:url,
-//				    dataType:'json',
-//				    processData: false, 
-//				    type:'post',
-//				    success:function(data){
-//						var cur=document.querySelectorAll("#cur>a");
-//						var name=0;
-//						for(var i=0;i<cur.length;i++){
-//							cur[i].addEventListener('tap',function(){
-//								name=$(this).attr('name');
-//								console.log($(this).attr('name'))
-//								if(name==0){
-//									var fragment = document.createDocumentFragment();
-//									var li; 
-//							    	for(var i=0;i<data.Data.Data.length;i++){
-//							    		li = document.createElement('li');
-//										li.className = 'mui-table-view-cell mui-media';
-//										li.innerHTML = '<a href="'+'"><img class="mui-pull-left" src="'
-//										+data.Data.Data[i].ThumbImg
-//										+'"><div class="saishi_text mui-media-body"><h2 class="">'
-//										+data.Data.Data[i].Title
-//										+'</h2><div class="mui-text-justify">内容简介：'
-//										+data.Data.Data[i].BodyMsg
-//										+'</div></div></a><div class="saishi_time"><p class="peixun_p">培训时间：'
-//										+data.Data.Data[i].TrainTime
-//										+'</p><button class="mui-btn-blue border-radius">快速报名</button></div>'
-//										fragment.appendChild(li);
-//							    	}
-//									document.querySelector("#item1mobile ul").appendChild(fragment);
-//								}else if(name==1){
-//									var fragment = document.createDocumentFragment();
-//									var li; 
-//							    	for(var i=0;i<data.Data.Data.length;i++){
-//							    		li = document.createElement('li');
-//										li.className = 'mui-table-view-cell mui-media';
-//										li.innerHTML = '<a href="'+'"><img class="mui-pull-left" src="'
-//										+data.Data.Data[i].ThumbImg
-//										+'"><div class="saishi_text mui-media-body"><h2 class="">'
-//										+data.Data.Data[i].Title
-//										+'</h2><div class="mui-text-justify">内容简介：'
-//										+data.Data.Data[i].BodyMsg
-//										+'</div></div></a><div class="saishi_time"><p class="peixun_p">培训时间：'
-//										+data.Data.Data[i].TrainTime
-//										+'</p><button class="mui-btn-blue border-radius">快速报名</button></div>'
-//										fragment.appendChild(li);
-//							    	}
-//									document.querySelector("#item2mobile ul").appendChild(fragment);
-//								}else{
-//									var fragment = document.createDocumentFragment();
-//									var li; 
-//							    	for(var i=0;i<data.Data.Data.length;i++){
-//							    		li = document.createElement('li');
-//										li.className = 'mui-table-view-cell mui-media';
-//										li.innerHTML = '<a href="'+'"><img class="mui-pull-left" src="'
-//										+data.Data.Data[i].ThumbImg
-//										+'"><div class="saishi_text mui-media-body"><h2 class="">'
-//										+data.Data.Data[i].Title
-//										+'</h2><div class="mui-text-justify">内容简介：'
-//										+data.Data.Data[i].BodyMsg
-//										+'</div></div></a><div class="saishi_time"><p class="peixun_p">培训时间：'
-//										+data.Data.Data[i].TrainTime
-//										+'</p><button class="mui-btn-blue border-radius">快速报名</button></div>'
-//										fragment.appendChild(li);
-//							    	}
-//									document.querySelector("#item3mobile ul").appendChild(fragment);
-//								}
-//							})
-//						}
-//						
-////				    	console.log(JSON.stringify(data));
-//				    },
-//				    error:fail
-//			    });
-//			function fail(data) {
-//		        alert(JSON.stringify(data));
-//			}
+			    		if(data.Data.Data[i].Id==22){//第一个导航栏name值
+							var fragment = document.createDocumentFragment();//创建一个代码片段
+							var li;
+					    	for(var i=0;i<data.Data.Data.length;i++){//循环输出data中的数据
+					    		li = document.createElement('li');
+								li.className = 'mui-table-view-cell mui-media';
+								li.innerHTML = '<a href="'+'"><img class="mui-pull-left" src="'
+								+data.Data.Data[i].ThumbImg
+								+'"><div class="saishi_text mui-media-body"><h2 class="">'
+								+data.Data.Data[i].Title
+								+'</h2><div class="mui-text-justify">内容简介1：'
+								+data.Data.Data[i].BodyMsg 
+								+'</div></div></a><div class="saishi_time"><p class="peixun_p">培训时间1：'
+								+data.Data.Data[i].TrainTime
+								+'</p><button class="mui-btn-blue border-radius">快速报名</button></div>'
+								fragment.appendChild(li);
+					    	}
+							document.querySelector("#item1mobile ul").appendChild(fragment);//输出到#item1mobile的页面内容
+						}
+			    	}
+
+					var btn=document.querySelectorAll(".saishi_time>button");//列表中的所有快速报名按钮
+					for(var i=0;i<btn.length;i++){
+						btn[i].addEventListener('tap', function() {
+							var mytext=$(this).parent().prev().find('h2').text();//当前按钮上面h2中的内容
+							mui.openWindow({
+								url: 'index_con.html', //跳转的页面
+								id:'index_con.html',
+								extras:{
+									texts:mytext//传递数据的参数
+								},
+							});
+						});
+					}
+//				    	console.log(JSON.stringify(data));
+			    },
+			    error:fail
+		    });
+			function fail(data) {
+		        alert(JSON.stringify(data));
+			}
 			
 			(function(){
-//				console.log(Title)
-				var btn=document.querySelectorAll(".saishi_time>button");
-				for(var i=0;i<btn.length;i++){
-					btn[i].addEventListener('tap', function() {
-						var mytext=$(this).parent().prev().find('h2').text();
-						mui.openWindow({
-							url: 'index_con.html', 
-							id:'index_con.html',
-							extras:{
-								texts:mytext
-							},
-						});
-					});
-				}
-
-				var t=setTimeout(function(){
+				var t=setTimeout(function(){//两秒后地区隐藏
 					$("#time2").slideUp();
 					clearInterval(t)
 				},2000)
 			})()
-			
+
 			mui.init();
-			
 			(function($) {
+
 				//阻尼系数
 				var deceleration = mui.os.ios?0.003:0.0009;
-
 			    var myTitle="";
 			    var myThumbImg="";
 			    var myBodyMsg="";
@@ -271,10 +242,8 @@
 					deceleration:deceleration
 				});
 
-				function fail(data) {
-			        alert(data);
-				}
 				$.ready(function() {
+
 					//循环初始化所有下拉刷新，上拉加载。
 					$.each(document.querySelectorAll('#item1mobile .mui-scroll'), function(index, pullRefreshEl) {
 						$(pullRefreshEl).pullToRefresh({
@@ -360,15 +329,7 @@
 						for (var i = 0; i < count; i++) {
 							li = document.createElement('li');
 							li.className = 'mui-table-view-cell mui-media';
-							li.innerHTML = '<a href="'+'"><img class="mui-pull-left" src="'
-							+ThumbImg
-							+'"><div class="saishi_text mui-media-body"><h2 class="">'
-							+Title
-							+'</h2><p class="mui-text-justify">内容简介：'
-							+BodyMsg
-							+'</p></div></a><div class="saishi_time"><p class="peixun_p">培训时间：'
-							+TrainTime
-							+'</p><button class="mui-btn-blue border-radius">快速报名</button></div>'
+							li.innerHTML = '<a href="javascript:;"><img class="mui-pull-left" src="../img/saishi_img.jpg"><div class="saishi_text mui-media-body"><h2 class="">2017年全国大众跆拳道11111年审复训培训班1</h2><p class="mui-text-justify">内容简介：2017年全国大众跆111111判员年审复训1</p></div></a><div class="saishi_time"><p class="peixun_p">培训时间：2017年5月20日</p><button class="mui-btn-blue border-radius">快速报名</button></div>';
 							fragment.appendChild(li);
 						}
 						return fragment;
