--- a/training/training_con_cs.html
+++ b/training/training_con_cs.html
@@ -53,10 +53,10 @@
 			<button class="mui-btn mui-btn-primary mui-btn-block" onclick="myUrl()">立即报名</button>
 		</div>
 		
-		<div id="resText">这是初始的内容</div>
+		<!--<div id="resText">这是初始的内容</div>
 		
 		<div id="username">username1</div>
-		<div id="content">content1</div>
+		<div id="content">content1</div>-->
 		
 
 		<script src="../js/jquery-1.9.1.min.js"></script>
