--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -19,7 +19,10 @@
 	</head>
 
 	<body>
-		<a href=""><img class="charity_img" src="../img/Charity_banner.jpg"/></a>
+		<div class="charityTemplate">
+			<div class="charityTemplate1"></div>
+		</div>
+		<!--<a href=""><img class="charity_img" src="../img/Charity_banner.jpg"/></a>
 		<div class="charity_tit">
 			<h2>支教动态</h2>
 			<a href="">更多></a>
@@ -42,11 +45,100 @@
 			<a href=""><img src="../img/Charity_img1.jpg"/></a>
 			<a href=""><img src="../img/Charity_img2.jpg"/></a>
 			<a href=""><img src="../img/Charity_img3.jpg"/></a>
-		</div>
-		
-		
-
+		</div>-->
+		<script type="text/html" id="charityListL">
+			{{each  charityList as value}}
+				<div class="one">{{value.title}}</div>
+				
+			{{/each}}
+		</script>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/flexable.js"></script>
+		<script src="../js/zepto_1.1.3.js"></script>
+		<script src="../js/common.js"></script>
+		<script src="../js/artTemplate.js"></script>
 		
+		
+		
+		
+		
+		<script>
+			// 公益接口
+			$(document).ready(function() {
+				var url = 'http://47.93.192.128:5001/News/GongyiList';
+				$.ajax({
+					url: url,
+					dataType: 'json',
+					type: 'post',
+					success: function(data) {
+						console.log(data);
+						var str = template("charityListL", {charityList: data.Data.Data})
+						$(".charityTemplate1").html(str);
+					},
+					error: function(XMLHttpRequest, textStatus, errorThrown) {
+						alert(XMLHttpRequest.status);
+						
+					}
+				});
+			});
+//			// 支教新闻更多接口OK
+//			$(document).ready(function() {
+//				var url = 'http://47.93.192.128:5001/News/GetGongyiNewsList';
+//				$.ajax({
+//					url: url,
+//					dataType: 'json',
+//					type: 'post',
+//					success: function(data) {
+//						console.log(data);
+////						var str = template("charityList", {activition: data.Data.Data})
+////						$(".mui-table-view-member").html(str);
+//					},
+//					error: function(XMLHttpRequest, textStatus, errorThrown) {
+//						alert(XMLHttpRequest.status);
+//						
+//					}
+//				});
+//			});
+//			// 最新图文更多接口OK
+//			$(document).ready(function() {
+//				var url = 'http://47.93.192.128:5001/News/GetGongyiImgNewsList';
+//				$.ajax({
+//					url: url,
+//					dataType: 'json',
+//					type: 'post',
+//					success: function(data) {
+//						console.log(data);
+////						var str = template("charityList", {activition: data.Data.Data})
+////						$(".mui-table-view-member").html(str);
+//					},
+//					error: function(XMLHttpRequest, textStatus, errorThrown) {
+//						alert(XMLHttpRequest.status);
+//						
+//					}
+//				});
+//			});
+//			
+//			
+//			//
+//			// 支教视频更多接口
+//			$(document).ready(function() {
+//				var url = 'http://47.93.192.128:5001/News/GetGongyiVideoList';
+//				$.ajax({
+//					url: url,
+//					dataType: 'json',
+//					type: 'post',
+//					success: function(data) {
+//						console.log(data);
+////						var str = template("charityList", {activition: data.Data.Data})
+////						$(".mui-table-view-member").html(str);
+//					},
+//					error: function(XMLHttpRequest, textStatus, errorThrown) {
+//						alert(XMLHttpRequest.status);
+//						
+//					}
+//				});
+//			});
+//			
+		</script>
 	</body>
 </html>
