--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -23,48 +23,30 @@
 
 	<body>
 		<div class="dg_record">
-			<ul class="mui-table-view">
-				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
-						<img class="mui-media-object mui-pull-left" src="../img/members_img.jpg">
-						<div class="mui-media-body">
-							<h4 class='mui-ellipsis'>2017年全国大众跆拳道一级以上裁判员年审复训培训班</h4>
-							<p class='mui-ellipsis'>活动时间：2017年12月20日至2017年12月25日</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
-						<img class="mui-media-object mui-pull-left" src="../img/members_img.jpg">
-						<div class="mui-media-body">
-							<h4 class='mui-ellipsis'>2017年全国大众跆拳道一级以上裁判员年审复训培训班</h4>
-							<p class='mui-ellipsis'>活动时间：2017年12月20日至2017年12月25日</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
-						<img class="mui-media-object mui-pull-left" src="../img/members_img.jpg">
-						<div class="mui-media-body">
-							<h4 class='mui-ellipsis'>2017年全国大众跆拳道一级以上裁判员年审复训培训班</h4>
-							<p class='mui-ellipsis'>活动时间：2017年12月20日至2017年12月25日</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
-						<img class="mui-media-object mui-pull-left" src="../img/members_img.jpg">
-						<div class="mui-media-body">
-							<h4 class='mui-ellipsis'>2017年全国大众跆拳道一级以上裁判员年审复训培训班</h4>
-							<p class='mui-ellipsis'>活动时间：2017年12月20日至2017年12月25日</p>
-						</div>
-					</a>
-				</li>
+			<ul class="mui-table-view mui-table-view-member">
 			</ul>
 		</div>
 		
-
+		<script type="text/html" id="memberRecord">
+			{{each activition as value}}
+			<li class="mui-table-view-cell mui-media" id="{{value.Id}}">
+					<a href="javascript:;">
+						<img class="mui-media-object mui-pull-left" src="{{value.pic}}">
+						<div class="mui-media-body">
+							<h4 class='mui-ellipsis'>{{value.title}}</h4>
+							<p class='mui-ellipsis'>活动时间：{{value.activity_time}}至{{value.activity_Endtime}}</p>
+						</div>
+					</a>
+				</li>
+			{{/each}}	
+		</script>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/flexable.js"></script>
+		<script src="../js/zepto_1.1.3.js"></script>
+		<script src="../js/common.js"></script>
+		<script src="../js/members_Record.js"></script>
+		<script src="../js/artTemplate.js"></script>
+		
 		
 	</body>
 </html>
