--- a/announce/announceDetail.html
+++ b/announce/announceDetail.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>公告详情</title>
+		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -13,7 +13,8 @@
 	</head>
 
 	<body>
-		<div class="mui-scroll-wrapper" id="protocol">
+		<div id="view"></div>
+		<!--<div class="mui-scroll-wrapper" id="protocol">
 			<div class="mui-scroll">
 				<div class="announceDetailPage">
 					<div class="announceDetailTil">
@@ -28,12 +29,69 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 		<script src="../js/flexable.js"></script>
 		<script src="../js/zepto_1.1.3.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/common.js"></script>
 		<script src="../js/announceDetail.js"></script>
+		<script src="../js/laytpl.js"></script>
+		<script id="demo" type="text/html">	
+			<div class="mui-scroll-wrapper" id="protocol">
+			<div class="mui-scroll">
+				<div class="announceDetailPage">
+					<div class="announceDetailTil">
+						2017年全国大众跆拳道xxx赛事
+					</div>
+					<div class="announceDetailTime clearfix">
+						<span class="floatL Ltime">{{d.list.time}}</span>
+						<span class="floatR Rfrom">{{d.list.source}}</span>
+					</div>
+					<div class="announceDetailMainbody">
+						     {{d.list.content}}
+					</div>
+				</div>
+			</div>
+		</div>
+	
+		</script>
+		<script type="text/javascript">
+		
+			window.onload=function(){
+
+				if (window.XMLHttpRequest){// code for IE7+, Firefox, Chrome, Opera, Safari
+
+					xmlhttp=new XMLHttpRequest();
+
+				}else{// code for IE6, IE5
+
+					xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+                    
+				}
+                xmlhttp.open("POST",'http://d2p7pk.natappfree.cc/Notice/Notice_Detail',true);
+                xmlhttp.setRequestHeader("Content-Type","application/x-www-form-urlencoded; charset=utf-8") 
+                var params="Id="+1005;
+				xmlhttp.send(params);	
+				xmlhttp.onreadystatechange=function(){
+
+					if (xmlhttp.readyState==4 && xmlhttp.status==200){
+                    console.log(111111111111);
+ 					var data = JSON.parse(xmlhttp.responseText).Data.data;
+ 					console.log(data);
+   					var data = {
+					  title: '前端攻城师',
+					  list: data
+					};
+					console.log(data);
+					var gettpl = document.getElementById('demo').innerHTML;
+					laytpl(gettpl).render(data, function(html){
+					  document.getElementById('view').innerHTML = html;
+					});
+
+				}
+				};
+			}
+		</script>
 	</body>
 
 </html>
