培训、赛事、公告、新闻的详情页

--- a/announce/announce.html
+++ b/announce/announce.html
@@ -13,26 +13,17 @@
 		<script src="../js/jquery-1.9.1.min.js"></script>
 		<script src="../js/flexable.js"></script>
 	</head>
+
 	<body>
 		<div class="mui-content">
 			<div id="slider" class="mui-slider mui-fullscreen">
-					<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<div class="mui-scroll" id="cur">
-						<!--<a class="mui-control-item mui-active" href="#item1mobile">
-							政策法规
-						</a>
-						<a class="mui-control-item" href="#item2mobile">
-							会议
-						</a>
-						<a class="mui-control-item" href="#item3mobile">
-							通知
-						</a>
-						<a class="mui-control-item" href="#item4mobile">
-							声明
-						</a>
-						<a class="mui-control-item" href="#item5mobile">
-							其他
-						</a>-->
+						<!--<a class="mui-control-item mui-active" href="#item1mobile">政策法规</a>
+						<a class="mui-control-item" href="#item2mobile">会议</a>
+						<a class="mui-control-item" href="#item3mobile">通知</a>
+						<a class="mui-control-item" href="#item4mobile">声明</a>
+						<a class="mui-control-item" href="#item5mobile">其他</a>-->
 					</div>
 				</div>
 				<div class="mui-slider-group">
@@ -41,13 +32,13 @@
 							<div class="mui-scroll">
 								<div id="view"></div>
 								<ul class="mui-table-view announceUl" id="List">
-									<li class="mui-table-view-cell announceLi">
+									<!--<li class="mui-table-view-cell announceLi">
 										<div class="floatL announceNewsImg"><img src="../img/timg4.jpg"/></div>
 										<div class="announceNews clearfix floatR">
 											<div class="announceNewsTil">2017年全国大众跆拳道一级以上 裁判员年审复培训训班</div>
 											<div class="announceNewsTime floatR">2017-03-04</div>
 										</div>
-									</li>
+									</li>-->
 								</ul>
 							</div>
 						</div>
@@ -58,52 +49,12 @@
 		</div>
 
 		<script>
-			(function() {
-				var t = setTimeout(function() {
-					$("#time2").slideUp();
-					clearInterval(t)
-				}, 2000)
-			})()
+			function texts(id) {
+				window.location.href = "announceContent.html?id=" + id;
+			}
 
 			var NavUrl = "http://47.93.192.128:5001/Notice/NoticeNavBar";
 			var ListUrl = "http://47.93.192.128:5001/Notice/Notice_List";
-			//默认加载
-			$.ajax({
-				type: "post",
-				url: ListUrl,
-				data: {
-					type_id: 11,
-					pageindex: 1
-				},
-				datatype: "json",
-				success: function(data) {
-					data = eval('(' + data + ')');
-					var fragment = document.createDocumentFragment(); //创建一个代码片段
-					var li;
-					if(typeof(data.Data.Data) != "undefined") {
-							for(var i = 0; i < data.Data.Data.length; i++) { //循环输出data中的数据
-								li = document.createElement('li');
-								li.className = 'mui-table-view-cell announceLi';
-								li.innerHTML = '<div class="floatL announceNewsImg"><img src="'+
-								data.Data.Data[i].pic+
-								'"/></div><div class="announceNews clearfix floatR"><div class="announceNewsTil">'+
-								data.Data.Data[i].Title+
-								'</div><div class="announceNewsTime floatR">'+
-								data.Data.Data[i].CreatedTime+
-								'</div></div>'
-								fragment.appendChild(li);
-							}
-						}
-
-
-					$('#List li').remove();
-					document.querySelector("#List").appendChild(fragment); //输出到#item1mobile的页面内容
-
-				},
-				error: function() {
-
-				}
-			});
 
 			//加载列表的方法
 			function innerList(typeid) {
@@ -117,36 +68,26 @@
 					},
 					datatype: "json",
 					success: function(data) {
-						console.log(data)
+						//						console.log(data)
 						data = eval('(' + data + ')');
 						var fragment = document.createDocumentFragment(); //创建一个代码片段
 						var li;
 						if(typeof(data.Data.Data) != "undefined") {
 							for(var i = 0; i < data.Data.Data.length; i++) { //循环输出data中的数据
+								//								console.log(data.Data.Data[i].Id)
 								li = document.createElement('li');
 								li.className = 'mui-table-view-cell announceLi';
-								li.innerHTML = '<div class="floatL announceNewsImg"><img src="'+
-								data.Data.Data[i].pic+
-								'"/></div><div class="announceNews clearfix floatR"><div class="announceNewsTil">'+
-								data.Data.Data[i].Title+
-								'</div><div class="announceNewsTime floatR">'+
-								data.Data.Data[i].CreatedTime+
-								'</div></div>'
+								li.innerHTML = '<div class="floatL announceNewsImg"><img src="' +
+									data.Data.Data[i].pic +
+									'"/></div><div class="announceNews clearfix floatR"><div onclick="texts(' + data.Data.Data[i].Id + ')" class="announceNewsTil">' +
+									data.Data.Data[i].Title +
+									'</div><div class="announceNewsTime floatR">' +
+									data.Data.Data[i].CreatedTime +
+									'</div></div>'
 								fragment.appendChild(li);
 							}
-						}
 
-//						function newBtn(btn) {
-//							var mytext = btn.parent().prev().find('h2').text(); //当前按钮上面h2中的内容
-//							alert(mytext)
-//							mui.openWindow({
-//								url: 'index_con.html', //跳转的页面
-//								id: 'index_con.html',
-//								extras: {
-//									texts: mytext //传递数据的参数
-//								},
-//							});
-//						}
+						}
 
 						$('#List li').remove();
 						document.querySelector("#List").appendChild(fragment); //输出到#item1mobile的页面内容
@@ -175,7 +116,6 @@
 								a.href = "javascript:innerList(" + data.Data.Data[i].Id + ");";
 								a.innerHTML = data.Data.Data[i].Title;
 								fragment.appendChild(a);
-
 							}
 						}
 
@@ -185,7 +125,7 @@
 							$("#cur>a").removeClass("mui-active");
 							$(this).addClass("mui-active")
 						})
-//						innerList(parseInt(data.Data.Data[0].Id));
+						//innerList(parseInt(data.Data.Data[0].Id));
 
 					},
 					error: function() {
@@ -197,7 +137,7 @@
 			//页面价在后执行   加载导航的方法
 			window.onload = function() {
 				getRem(750, 100)
-				innerNav();
+				innerNav(11);
 
 			}
 			window.onresize = function() {
@@ -210,12 +150,8 @@
 				var oWidth = document.body.clientWidth || document.documentElement.clientWidth;
 				html.style.fontSize = oWidth / pwidth * prem + "px";
 			}
-			
-			
-			
 		</script>
-	
-		</script>
+
 	</body>
 
 </html>
