--- a/training/training_list.html
+++ b/training/training_list.html
@@ -166,6 +166,9 @@
 		<!--<script src="../js/mui.pullToRefresh.material.js"></script>-->
 
 		<script>
+			function texts(id) {
+				window.location.href = "trainingContent.html?id=" + id;
+			}
 			(function() {
 				var t = setTimeout(function() {
 					$("#time2").slideUp();
@@ -192,15 +195,15 @@
 					for(var i = 0; i < data.Data.Data.length; i++) { //循环输出data中的数据
 						li = document.createElement('li');
 						li.className = 'mui-table-view-cell mui-media';
-						li.innerHTML = '<a href="' + '"><img class="mui-pull-left" src="' +
-							data.Data.Data[i].ThumbImg +
-							'"><div class="saishi_text mui-media-body"><h2 class="">' +
-							data.Data.Data[i].Title +
-							'</h2><div class="mui-text-justify">内容简介1：' +
-							data.Data.Data[i].BodyMsg +
-							'</div></div></a><div class="saishi_time"><p class="peixun_p">培训时间1：' +
-							data.Data.Data[i].TrainTime +
-							'</p><button class="mui-btn-blue border-radius">快速报名</button></div>'
+						li.innerHTML = '<div class="overflow"><img class="mui-pull-left" src="' +
+									data.Data.Data[i].pic +
+									'"><div onclick="texts(' + data.Data.Data[i].id + ')" class="saishi_text mui-media-body"><h2 class="">' +
+									data.Data.Data[i].Title +
+									'</h2><div class="mui-text-justify">内容简介：' +
+									data.Data.Data[i].content +
+									'</div></div></div><div class="saishi_time"><p class="peixun_p">培训时间：' +
+									data.Data.Data[i].MatchDate +
+									'</p><button class="mui-btn-blue border-radius">快速报名</button></div>'
 						fragment.appendChild(li);
 					}
 
@@ -233,14 +236,14 @@
 							for(var i = 0; i < data.Data.Data.length; i++) { //循环输出data中的数据
 								li = document.createElement('li');
 								li.className = 'mui-table-view-cell mui-media';
-								li.innerHTML = '<a href="' + '"><img class="mui-pull-left" src="' +
-									data.Data.Data[i].ThumbImg +
-									'"><div class="saishi_text mui-media-body"><h2 class="">' +
+								li.innerHTML = '<div class="overflow"><img class="mui-pull-left" src="' +
+									data.Data.Data[i].pic +
+									'"><div onclick="texts(' + data.Data.Data[i].id + ')" class="saishi_text mui-media-body"><h2 class="">' +
 									data.Data.Data[i].Title +
-									'</h2><div class="mui-text-justify">内容简介1：' +
-									data.Data.Data[i].BodyMsg +
-									'</div></div></a><div class="saishi_time"><p class="peixun_p">培训时间1：' +
-									data.Data.Data[i].TrainTime +
+									'</h2><div class="mui-text-justify">内容简介：' +
+									data.Data.Data[i].content +
+									'</div></div></div><div class="saishi_time"><p class="peixun_p">培训时间：' +
+									data.Data.Data[i].MatchDate +
 									'</p><button class="mui-btn-blue border-radius">快速报名</button></div>'
 								fragment.appendChild(li);
 							}
