--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -35,12 +35,12 @@
 				</div>
 				<div class="memberImage">
 					<div class="Img_img">
-						<img src="../img/member.png" alt="" />
+						<!--<img src="../img/member.png" alt="" />-->
 					</div>
 				</div>
 			</div>
 			<ul id="resultUl">
-				<li><span class="commonColor">会员编码：</span><span id="memberNumber" class="commonRight">TN160077772</span></li>
+				<!--<li><span class="commonColor">会员编码：</span><span id="memberNumber" class="commonRight">TN160077772</span></li>
 				<li><span class="commonColor">验证码：</span><span id="identifyCode" class="commonRight">b050</span></li>
 				<li><span class="commonColor">会员姓名：</span><span id="memberName" class="commonRight">司亮</span></li>
 				<li><span class="commonColor">出生日期：</span><span id="memberBirth" class="commonRight">1980-4-23</span></li>
@@ -48,7 +48,7 @@
 				<li><span class="commonColor">到期时间：</span><span id="endTime" class="commonRight">2020-3-24</span></li>
 				<li class="identifyResultshowMore">显示更多信息</li>
 				<li class="coverOrshow"><span class="commonColor">段位信息：</span><span id="taekwondo" class="commonRight">05216846【4段】</span></li>
-				<li class="coverOrshow"><span class="commonColor">通过时间：</span><span id="passTime" class="commonRight">2016-06-08</span></li>
+				<li class="coverOrshow"><span class="commonColor">通过时间：</span><span id="passTime" class="commonRight">2016-06-08</span></li>-->
 				
 			</ul>
 		</div>
