--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -19,35 +19,7 @@
 
 	<body>
 		
-		<!--<a href=""><img class="charity_img" src="../img/Charity_banner.jpg"/></a>
-		<div class="charity_tit">
-			<h2>支教动态</h2>
-			<a href="">更多></a>
-		</div>
-		<div class="charity_list">
-			<ul class="mui-table-view">
-				 <li class="mui-table-view-cell"><a href=""><p>我校组团赴南北疆各地州慰问第二十一批我校组团赴南北疆各地州慰问第二十一批</p><span>2017-5-16</span></a></li>
-				 <li class="mui-table-view-cell"><a href=""><p>我校组团赴南北疆各地州慰问第二十一批...</p><span>2017-5-16</span></a></li>
-				 <li class="mui-table-view-cell"><a href=""><p>我校组团赴南北疆各地州慰问第二十一批...</p><span>2017-5-16</span></a></li>
-				 <li class="mui-table-view-cell"><a href=""><p>我校组团赴南北疆各地州慰问第二十一批...</p><span>2017-5-16</span></a></li>
-				 <li class="mui-table-view-cell"><a href=""><p>我校组团赴南北疆各地州慰问第二十一批...</p><span>2017-5-16</span></a></li>
-			</ul>
-		</div>
-		
-		<div class="charity_tit">
-			<h2>最新图文</h2>
-			<a href="">更多></a>
-		</div>
-		<div class="charity_list_img">
-			<a href=""><img src="../img/Charity_img1.jpg"/></a>
-			<a href=""><img src="../img/Charity_img2.jpg"/></a>
-			<a href=""><img src="../img/Charity_img3.jpg"/></a>
-		</div>-->
-		
-		<div class="charityList">
-			
-			
-		</div>
+		<div class="charityList"></div>
 		
 		<script type="text/html" id="charityList">
 			<div ><a href=""><img class="charity_img" src="../img/Charity_banner.jpg"/></a></div>
@@ -55,10 +27,10 @@
 				
 			<div class="charity_tit">
 				<h2>支教动态</h2>
-				<a href="">更多></a>
+				<a href="GetGongyiNewsList.html">更多></a>
 			</div>
 			{{each activition as value}}
-					{{include 'newslist' value}}
+				{{include 'newslist' value}}
 			{{/each}}
 			
 			<div class="charity_tit">
@@ -74,8 +46,8 @@
 			<div class="charity_list">
 				<ul class="mui-table-view">
 					{{each newslist as value i}}
-					 <li class="mui-table-view-cell">
-					 	<a href="" id="{{value.newsid}}"><p>{{value.newstitle}}</p><span>{{value.createtime}}</span></a>
+					 <li class="mui-table-view-cell" id="{{value.newsid}}">
+					 	<a><p>{{value.newstitle}}</p><span>{{value.createtime}}</span></a>
 					 </li>
 					 {{/each}}
 		 		</ul>
@@ -95,86 +67,9 @@
 		<script src="../js/flexable.js"></script>
 		<script src="../js/zepto_1.1.3.js"></script>
 		<script src="../js/common.js"></script>
+		<script src="../js/charity_list.js"></script>
 		<script src="../js/artTemplate.js"></script>
-		
-		<script>
-			// 公益接口
-			$(document).ready(function() {
-					var url = 'http://47.93.192.128:5001/News/GongyiList';
-					$.ajax({
-						url: url,
-						dataType: 'json',
-						type: 'post',
-						success: function(data) {
-							console.log(data);
-							var str = template("charityList", {activition: data.Data})
-							$(".charityList").html(str);
-						},
-						error: function(XMLHttpRequest, textStatus, errorThrown) {
-							alert(XMLHttpRequest.status);
-							
-						}
-					});
-				});
-			// 支教新闻更多接口OK
-//			$(document).ready(function() {
-//				var url = 'http://47.93.192.128:5001/News/GetGongyiNewsList';
-//				$.ajax({
-//					url: url,
-//					dataType: 'json',
-//					type: 'post',
-//					success: function(data) {
-//						console.log(data);
-////						var str = template("charityList", {activition: data.Data.Data})
-////						$(".mui-table-view-member").html(str);
-//					},
-//					error: function(XMLHttpRequest, textStatus, errorThrown) {
-//						alert(XMLHttpRequest.status);
-//						
-//					}
-//				});
-//			});
-//			// 最新图文更多接口OK
-//			$(document).ready(function() {
-//				var url = 'http://47.93.192.128:5001/News/GetGongyiImgNewsList';
-//				$.ajax({
-//					url: url,
-//					dataType: 'json',
-//					type: 'post',
-//					success: function(data) {
-//						console.log(data);
-////						var str = template("charityList", {activition: data.Data.Data})
-////						$(".mui-table-view-member").html(str);
-//					},
-//					error: function(XMLHttpRequest, textStatus, errorThrown) {
-//						alert(XMLHttpRequest.status);
-//						
-//					}
-//				});
-//			});
-//			
-//			
-//			//
-//			// 支教视频更多接口
-//			$(document).ready(function() {
-//				var url = 'http://47.93.192.128:5001/News/GetGongyiVideoList';
-//				$.ajax({
-//					url: url,
-//					dataType: 'json',
-//					type: 'post',
-//					success: function(data) {
-//						console.log(data);
-////						var str = template("charityList", {activition: data.Data.Data})
-////						$(".mui-table-view-member").html(str);
-//					},
-//					error: function(XMLHttpRequest, textStatus, errorThrown) {
-//						alert(XMLHttpRequest.status);
-//						
-//					}
-//				});
-//			});
-//			
-		</script>
+	
 	
 	</body>
 </html>
