--- a/protocol.html
+++ b/protocol.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>认证协议</title>
+		<title>同意协议</title>
 		<script src="js/mui.min.js"></script>
 		<script src="js/flexable.js"></script>
 		<link href="css/mui.min.css" rel="stylesheet" />
