--- a/searchList/secret/secret.html
+++ b/searchList/secret/secret.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>软件协议及隐私声明</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -35,7 +35,7 @@
 			text-indent: 2em;
 			font-size:0.23rem;
 			color:#333;
-			line-height:0.5rem;
+			line-height:1.5rem;
 		}
 	</style>
 	<body>
@@ -58,17 +58,7 @@
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/common.js"></script>
 		<script>
-			mui.ajax("url",{
-				dataType:'json',//服务器返回json格式数据
-				type:'post',//HTTP请求类型
-				timeout:10000,//超时时间设置为10秒；
-				success:function(data){
-					/*data是后台处理好，前台是显示用的*/
-				},
-				error:function(xhr,type,errorThrown){
-					console.log(type);
-				}
-			}) 
+			
 		</script>
 	</body>
 
