--- a/searchList/searchList.html
+++ b/searchList/searchList.html
@@ -12,7 +12,11 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<script src="../js/jquery-1.9.1.min.js"></script>
 		<script src="../js/flexable.js"></script>
-		
+		<style>
+			.mui-fullscreen{
+				position: relative;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -49,7 +53,7 @@
 
 		<script>
 			function texts(id) {
-				window.location.href = "newsContent.html?id=" + id;
+				window.location.href = "searchContent.html?id=" + id;
 			}
 
 			var searchUrl = "http://47.93.192.128:5001/Search/SearchByKey";
@@ -58,36 +62,63 @@
 				type: "post",
 				url: searchUrl,
 				data: {
-					key: "赛事"
+//					typeid: 3,
+					key: "新闻"
 				},
 				datatype: "json",
 				success: function(data) {
-					console.log(data)
 					data = eval('(' + data + ')');
+//					console.log(data)
+//					console.log(data.Data)
+//					console.log(data.Data.query)
+					console.log(data.Data.query)
+					console.log(data.Data.query.length)
 					var fragment = document.createDocumentFragment(); //创建一个代码片段
 					var li;
-
-					if(typeof(data.Data.Data) != "undefined") {
-						for(var i = 0; i < data.Data.Data.length; i++) { //循环输出data中的数据
+					
+					if(typeof(data.Data.query) != "undefined") {
+					for(var i = 0; i < data.Data.query.length; i++) { //循环输出data中的数据
 							li = document.createElement('li');
-							//li.className = 'mui-table-view-cell mui-media';
-							if(data.Data.Data[i].pics.length == 3) {
-								console.log(data.Data.Data[i].pics)
-								console.log(data.Data.Data[i].id)
-								li.innerHTML = '<div class="mui-table-view-cell" id="' + data.Data.Data[i].id + '"><div onclick="texts(' + data.Data.Data[i].id + ')" class="muipurelyTitle">' + data.Data.Data[i].title + '</div><div class="muipurelyImg" id="purelyImg"><img src="' + data.Data.Data[i].pics[0] + '"><img src="' + data.Data.Data[i].pics[1] + '"><img src="' + data.Data.Data[i].pics[2] + '"></div><div class="muipurelytext "><p class="muipurelylook clearfix"><span class="lookLeft">' + data.Data.Data[i].publishDate + data.Data.Data[i].source + '</span><span class="lookRight"><i class="look"></i>' + data.Data.Data[i].viewCount + '</span></p></div></div>'
-
-							} else if(data.Data.Data[i].pics.length == 0 && data.Data.Data[i].thumbImg) {
-								li.innerHTML = '<div class="mui-table-view-cell" id="' + data.Data.Data[i].id + '"><div class="mui-table-Img">' +
-									'<img src="' + data.Data.Data[i].thumbImg + '"/></div><div class="mui-table-text"><p onclick="texts(' + data.Data.Data[i].id + ')" class="mui-table-Tile">' + data.Data.Data[i].title + '</p><p class="mui-table-look"><span class="lookLeft">' + data.Data.Data[i].publishDate + data.Data.Data[i].source + '</span><span class="lookRight"><i class="look"></i>' + data.Data.Data[i].viewCount + '</span></p></div></div>'
+							li.className = 'mxhLi';
+							console.log(data.Data.query[i].pic.length)
+							if(data.Data.query[i].pic.length == 3) {
+//								console.log(data.Data.query[i].pic)
+//								console.log(data.Data.query[i].Title)
+								li.innerHTML = '<div onclick="texts(' + data.Data.query[i].Id + ')"><div class="muipurelyTitle">' +
+									data.Data.query[i].Title +
+									'</div><div class="muipurelyImg" id="purelyImg"><img src="' +
+									data.Data.query[i].pic + '"><img src="' + data.Data.query[i].pic[1] + '"><img src="' + data.Data.query[i].pic[2] +
+									'"></div><div class="muipurelytext "><p class="muipurelylook clearfix"><span class="lookLeft">' +
+									data.Data.query[i].createTime +
+									'</span><span class="lookRight"><i class="look"></i>' +
+									data.Data.query[i].viewCount +
+									'</span></p></div></div>'
+							} else if(data.Data.query[i].pic.length == 0) {
+//								console.log(data.Data.query[i].Title)
+								li.innerHTML = '<div onclick="texts(' + data.Data.query[i].Id + ')"><div class="mui-table-Img"><img src="' +
+									data.Data.query[i].pic +
+									'" /></div><div class="mui-table-text"><p class="mui-table-Tile">' +
+									data.Data.query[i].Title +
+									'</p><p class="mui-table-look"><span class="lookLeft">' +
+									data.Data.query[i].createTime +
+									'</span><span class="lookRight"><i class="look"></i>' +
+									data.Data.query[i].viewCount +
+									'</span></p></div></div>'
 							} else {
-								li.innerHTML = '<div class="mui-table-view-cell" id="' + data.Data.Data[i].id + '"><div onclick="texts(' + data.Data.Data[i].id + ')" class="muipurelyTitle">' + data.Data.Data[i].title + '</div><div class="muipurelytext "><p class="muipurelylook clearfix"><span class="lookLeft">' + data.Data.Data[i].publishDate + data.Data.Data[i].source + '</span><span class="lookRight"><i class="look"></i>' + data.Data.Data[i].viewCount + '</span></p></div></div>';
+								li.innerHTML = '<div onclick="texts(' + data.Data.query[i].Id + ')"><div class="muipurelyTitle">' +
+									data.Data.query[i].Title +
+									'</div><div class="muipurelytext "><p class="muipurelylook clearfix"><span class="lookLeft">' +
+									data.Data.query[i].createTime +
+									'</span><span class="lookRight"><i class="look"></i>' +
+									data.Data.query[i].viewCount +
+									'</span></p></div></div>'
 							}
 
 							fragment.appendChild(li);
 						}
 					}
 
-//					$('#List li').remove();
+//					$('#List').remove();
 					document.querySelector("#List").appendChild(fragment); //输出到#item1mobile的页面内容
 
 				},
