--- a/searchList/searchList.html
+++ b/searchList/searchList.html
@@ -52,10 +52,12 @@
 		</div>
 
 		<script>
-
+			var testUrl=window.location.href
+			testUrl=testUrl.substr(testUrl.lastIndexOf("=")).slice(1);
+			console.log(testUrl)
 
 			var searchUrl = "http://47.93.192.128:5001/Search/SearchByKey";
-			var searchtest="新闻";
+			var searchtest=testUrl;
 			function texts(id,searchtest) {
 				window.location.href = "searchContent.html?id=" + id+"&searchtest="+searchtest;
 			}
