--- a/searchList/searchList.html
+++ b/searchList/searchList.html
@@ -52,9 +52,9 @@
 		</div>
 
 		<script>
-			var testUrl=window.location.href
-			testUrl=testUrl.substr(testUrl.lastIndexOf("=")).slice(1);
-			console.log(testUrl)
+			var searchtest=window.location.href
+			searchtest=searchtest.substr(searchtest.lastIndexOf("=")).slice(1);
+			console.log(searchtest)
 
 			var searchUrl = "http://47.93.192.128:5001/Search/SearchByKey";
 			var searchtest=testUrl;
