--- a/searchList/searchList.html
+++ b/searchList/searchList.html
@@ -57,7 +57,7 @@
 			console.log(searchtest)
 
 			var searchUrl = "http://47.93.192.128:5001/Search/SearchByKey";
-			var searchtest=testUrl;
+//			var searchtest=testUrl;
 			function texts(id,searchtest) {
 				window.location.href = "searchContent.html?id=" + id+"&searchtest="+searchtest;
 			}
