--- a/searchList/searchList.html
+++ b/searchList/searchList.html
@@ -53,8 +53,7 @@
 
 		<script>
 			var searchtest=window.location.href
-			searchtest=searchtest.substr(searchtest.lastIndexOf("=")).slice(1);
-			console.log(searchtest)
+			searchtest=decodeURIComponent(searchtest.substr(searchtest.lastIndexOf("=")).slice(1));
 
 			var searchUrl = "http://47.93.192.128:5001/Search/SearchByKey";
 //			var searchtest=testUrl;
@@ -72,7 +71,6 @@
 				datatype: "json",
 				success: function(data) {
 					data = eval('(' + data + ')');
-					console.log(data.Data.query.length)
 					var fragment = document.createDocumentFragment(); //创建一个代码片段
 					var li;
 					if(typeof(data.Data.query) != "undefined") {
@@ -80,7 +78,6 @@
 							li = document.createElement('li');
 							li.className = 'mxhLi';
 							
-							console.log(data.Data.query[i].pic.length)
 							if(data.Data.query[i].pic.length > 0) {
 								li.innerHTML = '<div onclick="texts(' + data.Data.query[i].Id + ',\''+encodeURIComponent(searchtest)+'\')"><div class="muipurelyTitle">' +
 									data.Data.query[i].Title +
@@ -90,7 +87,6 @@
 									data.Data.query[i].createTime +
 									'</span></p></div></div>'
 							} else if(data.Data.query[i].pic.length == 0) {
-//								console.log(data.Data.query[i].Title)
 								li.innerHTML = '<div onclick="texts(' + data.Data.query[i].Id + ',\''+encodeURIComponent(searchtest)+'\')"><div class="mui-table-Img"><img src="' +
 									data.Data.query[i].pic +
 									'" /></div><div class="mui-table-text"><p class="mui-table-Tile">' +
@@ -105,7 +101,6 @@
 									data.Data.query[i].createTime +
 									'</span></p></div></div>'
 							}
-
 							fragment.appendChild(li);
 						}
 					}
