--- a/training/trainingContent.html
+++ b/training/trainingContent.html
@@ -61,9 +61,9 @@
 					div.innerHTML = '<div class="announceDetailTil">' +
 						data.Data.Data.Title +
 						'</div><div class="announceDetailTime clearfix"><span class="floatL Ltime">' +
-						data.Data.Data.time +
+						data.Data.Data.TrainTime +
 						'</span><span class="floatR Rfrom">' +
-						data.Data.Data.source +
+						data.Data.Data.TrainAddress +
 						'</span></div><div class="announceDetailMainbody">' +
 						data.Data.Data.TrainContent +
 						'</div>'
