--- a/training/training_list.html
+++ b/training/training_list.html
@@ -196,13 +196,13 @@
 						li = document.createElement('li');
 						li.className = 'mui-table-view-cell mui-media';
 						li.innerHTML = '<div class="overflow"><img class="mui-pull-left" src="' +
-									data.Data.Data[i].pic +
+									data.Data.Data[i].ThumbImg +
 									'"><div onclick="texts(' + data.Data.Data[i].id + ')" class="saishi_text mui-media-body"><h2 class="">' +
 									data.Data.Data[i].Title +
 									'</h2><div class="mui-text-justify">内容简介：' +
-									data.Data.Data[i].content +
+									data.Data.Data[i].BodyMsg +
 									'</div></div></div><div class="saishi_time"><p class="peixun_p">培训时间：' +
-									data.Data.Data[i].MatchDate +
+									data.Data.Data[i].TrainTime +
 									'</p><button class="mui-btn-blue border-radius">快速报名</button></div>'
 						fragment.appendChild(li);
 					}
@@ -237,13 +237,13 @@
 								li = document.createElement('li');
 								li.className = 'mui-table-view-cell mui-media';
 								li.innerHTML = '<div class="overflow"><img class="mui-pull-left" src="' +
-									data.Data.Data[i].pic +
+									data.Data.Data[i].ThumbImg +
 									'"><div onclick="texts(' + data.Data.Data[i].id + ')" class="saishi_text mui-media-body"><h2 class="">' +
 									data.Data.Data[i].Title +
 									'</h2><div class="mui-text-justify">内容简介：' +
-									data.Data.Data[i].content +
+									data.Data.Data[i].BodyMsg +
 									'</div></div></div><div class="saishi_time"><p class="peixun_p">培训时间：' +
-									data.Data.Data[i].MatchDate +
+									data.Data.Data[i].TrainTime +
 									'</p><button class="mui-btn-blue border-radius">快速报名</button></div>'
 								fragment.appendChild(li);
 							}
